Add pre-trained models with Git LFS and image detection
Major additions:
- Enable Git LFS for *.keras and *.tflite files
- Add pre-trained models (6 models, ~65MB total):
  * mobilenetv2_final.keras (93.90% accuracy) - Production model
  * mobilenetv2_fp32.tflite (9.84MB) - FP32 optimized
  * mobilenetv2_int8.tflite (2.94MB) - INT8 quantized
  * baseline_final.keras (79.59% accuracy) - Comparison
  * baseline_v1.keras - Continued training version
  * mobilenetv2_phase1.keras - Phase 1 checkpoint

Scripts:
- scripts/08_image_detection.py - NEW: Detect waste from images
- scripts/download_models.py - Download models from releases
- outputs/models/README.md - Model documentation

Bug fixes:
- Fix emoji encoding errors in all detection scripts
- Fix emoji encoding in optimization script
- Update .gitignore to allow Git LFS tracked files

Users can now:
1. Clone repo and get models automatically (Git LFS)
2. Use download script if Git LFS unavailable
3. Skip training and use models directly
4. Detect waste from images, not just video/camera

--- a/waste_classifier_capstone/.gitignore
+++ b/waste_classifier_capstone/.gitignore
@@ -59,10 +59,11 @@ data/raw/*
 data/processed/*
 !data/processed/.gitkeep
 
-# Model outputs (too large for git)
-outputs/models/*.keras
+# Model outputs
+# .keras and .tflite are tracked with Git LFS
+# outputs/models/*.keras  # Now tracked with Git LFS
 outputs/models/*.h5
-outputs/models/*.tflite
+# outputs/models/*.tflite  # Now tracked with Git LFS
 outputs/models/*.pb
 !outputs/models/.gitkeep
 
